2008-08-02  Andre Klapper  <a9016009@gmx.de>

	* de/de.po:
	* Makefile.am:
	Committed initial german translation by Mario Blättermann.

2008-05-26  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/gnome-commander.xml:
	Added section for file search

2008-04-07  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/gnome-commander.xml:
	Support for <super>, <hyper> and <meta> modifiers (since GTK+ 2.10)

2008-03-20  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/gnome-commander.xml:
	Added GUI for keyboard shortcuts management

2008-03-04  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/gnome-commander.xml:
	Added "Start GNOME Commander as root" action to menu and user actions

	* doc/C/gnome-commander.xml:
	Multi-Rename-Tool - new $x and $X placeholders for random hexadecimal numbers

2007-09-20  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/gnome-commander.xml:
	Replaced old "connections.*" actions with "connections.open", "connections.close"
	and "connections.new" ones

2007-09-18  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/gnome-commander.xml:
	Added "view.home" and "view.root" actions

2007-03-26  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/gnome-commander.xml:
	Added support for user defined shortcuts (via configuration file)

2007-01-29  Piotr Eljasiak  <epiotr@use.pl>

	* doc/gnome-commander.1:
	* doc/C/gnome-commander.xml:
	Added support for OLE and ODF metags in advanced file rename templates

2007-01-22  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/gnome-commander.xml:
	Updated links to gcmd repository (cvs -> svn)