@@ -12,8 +12,8 @@ include $(top_srcdir)/gnome-doc-utils.make
 dist-hook: doc-dist-hook
 
 DOC_MODULE = gnome-commander
-DOC_ENTITIES = legal.xml
-DOC_INCLUDES =
+DOC_ENTITIES =
+DOC_INCLUDES = legal.xml
 DOC_FIGURES = \
 	figures/create_archive.png                              \
 	figures/dev_cd.png                                      \
